--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Artists</h1>
 
 <ul>
-  <% @posts.each do |p| %>
-    <li><%= link_to p.title, post_path(p) %></li>
+  <% @artists.each do |a| %>
+    <li><%= link_to a.name, artist_path(a) %></li>
   <% end %>
 </ul>
