--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -2,6 +2,6 @@
 
 <ul>
   <% @artists.each do |a| %>
-    <li><%= link_to a.name, artist_path(a) %>: <%= a.song_count %> songs </li>
+    <li><%= link_to a.name, artist_path(a) %>: <%= "song".pluralize(a.song_count) %> songs </li>
   <% end %>
 </ul>
