Automatically backed up by Learn

--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,7 +1,2 @@
 <h1> <%= @song.title %> </h1>
-
-<ul>
-  <% @song.artist.each do |artist| %>
-    <li><%= link_to artist.title, artist_path(artist) %></li>
-  <% end %>
-</ul>
+<p><%= link_to artist.title, artist_path(artist) %></p>
