--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,2 +1,2 @@
 <h1> <%= @song.title %> </h1>
-<p><%= link_to artist.name, artist_path(artist) %></p>
+<p><%= link_to @song.artist_name, artist_path(artist) %></p>
